--- a/index.html
+++ b/index.html
@@ -5,6 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
   </head>
-  <h1>Welcome to my Weather App</h1>
+  <header>
+    <form>
+      <input type="search" placeholder="Enter a city..." required />
+      <input type="Submit" value="Submit" />
+    </form>
+  </header>
+  <main>
+    <div>
+      <h1>Paris</h1>
+      <p>
+        Tuesday 14:49, Scattered clouds
+        <br />
+        Humidity: 66%, Wind: 3.3km/h
+      </p>
+    </div>
+    <div>🌤️12℃</div>
+  </main>
+  <footer>
+    This project was coded by
+    <a href="https://github.com/KuhleSimelane" target="_blank">
+      Kuhle Simelane</a
+    >, is
+    <a
+      href="https://github.com/KuhleSimelane/week-7-weather-app"
+      target="_blank"
+      >on Github</a
+    >
+    and is
+    <a href="https://weather-app-week-7-kpm.netlify.app/" target="_blank">
+      hosted on Netlify</a
+    >
+  </footer>
   <body></body>
 </html>
