--- a/index.html
+++ b/index.html
@@ -15,21 +15,32 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city..." required />
-          <input type="Submit" value="Submit" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city..."
+            required
+            class="search-form-input"
+          />
+          <input type="Submit" value="Submit" class="search-form-button" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Paris</h1>
-          <p>
-            Tuesday 14:49, Scattered clouds
-            <br />
-            Humidity: 66%, Wind: 3.3km/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Paris</h1>
+            <p class="weather-app-details">
+              Tuesday 14:49, Scattered clouds
+              <br />
+              Humidity: <strong>66%</strong>, Wind: <strong>3.3km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-temerature-container">
+            <div class="weather-app-icon">🌤️</div>
+            <div class="weather-app-temperature">12</div>
+            <div class="weather-app-unit">℃</div>
+          </div>
         </div>
-        <div>🌤️12℃</div>
       </main>
       <footer>
         This project was coded by
