--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="weather-app">
+    <div class="weather-app" id="search-form">
       <header>
         <form class="search-form">
           <input
             type="search"
             placeholder="Enter a city..."
             required
+            id="search-form-input"
             class="search-form-input"
           />
           <input type="Submit" value="Submit" class="search-form-button" />
@@ -28,7 +29,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Paris</h1>
+            <h1 class="weather-app-city" id="city">Paris</h1>
             <p class="weather-app-details">
               Tuesday 14:49, Scattered clouds
               <br />
@@ -58,5 +59,6 @@
         >
       </footer>
     </div>
+    <script src="src/app.js"></script>
   </body>
 </html>
