--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <div class="weather-app-unit">℃</div>
           </div>
         </div>
+        <div class="weather-forecast" id="forecast">
+          </div> 
       </main>
       <footer>
         This project was coded by
@@ -61,6 +63,7 @@
           hosted on Netlify</a
         >
       </footer>
+    </div>
     </div>
     <script src="src/app.js"></script>
   </body>
